--- a/chairmanhwang/templates/chairmanhwang/base.html
+++ b/chairmanhwang/templates/chairmanhwang/base.html
@@ -16,7 +16,7 @@
     <md-sidenav layout="column"
                 class="md-sidenav-left md-whiteframe-z2"
                 md-component-id="left"
-                md-is-locked-open="$media('gt-sm')">
+                md-is-locked-open="$media('gt-lg')">
         <md-toolbar>
             <h1>Powered by ZeroPage</h1>
         </md-toolbar>
@@ -42,7 +42,7 @@
 
     <div layout="column" layout-fill tabIndex="-1" role="main">
         <md-toolbar layout="row">
-            <button ng-click="toggleSidenav('left')" hide-gt-sm class="menuBtn">
+            <button ng-click="toggleSidenav('left')" hide-gt-lg class="menuBtn">
                 <span class="visuallyhidden">Menu</span>
             </button>
             <h1>ProjectCH</h1>
